fixed spacing, still glitchy

--- a/src/client/styles/InputBox.css
+++ b/src/client/styles/InputBox.css
@@ -37,7 +37,7 @@ textarea {
     text-align: left;
     min-height: 80px;
     max-height: 80vh;
-    width: 85%;
+    width: 100%;
     height: 100%;
     padding: 1em;
 
